Add new section

--- a/index.html
+++ b/index.html
@@ -578,6 +578,115 @@
 
                 </div>
             </section>
+
+            <section class="partnership-rules">
+                <div class="partnership-rules__container">
+
+                    <div class="partnership-rules-text">
+                        <div class="partnership-rules-text__title title">
+                            <h2>
+                                Become a Partner
+                            </h2>
+                        </div>
+                        <div class="partnership-rules-text__paragraph">
+                            Travalyst partners are part of a global network of change-makers, independent experts and
+                            academics – all working together to create viable, visible sustainability solutions.
+                            Fundamentals of our partnership include:
+                        </div>
+                    </div>
+
+                    <div class="partnership-rules-slider swiper-container">
+                        <div class="partnership-rules-slider__wrapper swiper-wrapper">
+
+                            <div class="partnership-rules-slider__slide swiper-slide">
+                                <div class="partnership-rules-slide__opacity">
+                                    <div class="partnership-rules-slide__number">
+                                        <span>1</span>
+                                    </div>
+                                    <div class="partnership-rules-slide__text">
+                                        <div class="partnership-rules-slide__title">
+                                            Collaboration
+                                        </div>
+                                        <div class="partnership-rules-slide__paragraph">
+                                            Creating game-changing impact through collaboration, sharing ideas and
+                                            information
+                                            in a supportive, pre-competitive structure.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="partnership-rules-slider__slide swiper-slide">
+                                <div class="partnership-rules-slide__opacity">
+                                    <div class="partnership-rules-slide__number">
+                                        <span>2</span>
+                                    </div>
+                                    <div class="partnership-rules-slide__text">
+                                        <div class="partnership-rules-slide__title">
+                                            Scale
+                                        </div>
+                                        <div class="partnership-rules-slide__paragraph">
+                                            Travalyst’s connections and access to world-renowned sustainability
+                                            specialists
+                                            and
+                                            academics enable us to scale initiatives at speed.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="partnership-rules-slider__slide swiper-slide">
+                                <div class="partnership-rules-slide__opacity">
+                                    <div class="partnership-rules-slide__number">
+                                        <span>3</span>
+                                    </div>
+                                    <div class="partnership-rules-slide__text">
+                                        <div class="partnership-rules-slide__title">
+                                            Networking
+                                        </div>
+                                        <div class="partnership-rules-slide__paragraph">
+                                            Being part of a group of changemakers and energising collaborators, all with
+                                            a
+                                            laser-sharp focus on changing the travel industry for the better.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="partnership-rules-slider__slide swiper-slide">
+                                <div class="partnership-rules-slide__opacity">
+                                    <div class="partnership-rules-slide__number">
+                                        <span>4</span>
+                                    </div>
+                                    <div class="partnership-rules-slide__text">
+                                        <div class="partnership-rules-slide__title">
+                                            Collective power
+                                        </div>
+                                        <div class="partnership-rules-slide__paragraph">
+                                            Finding strength in numbers: collectively we are brave and bold, and can
+                                            initiate change faster, together.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="partnership-rules-slider-buttons">
+                        <div class="partnership-rules-slider-button-prev button-prev"></div>
+                        <div class="partnership-rules-slider-button-next button-next"></div>
+                    </div>
+
+                    <a href="https://www.travelassist.io/en/you-are/tourism-partners/become-a-partner/">
+                        <div class="partnership-rules__link">
+                            Learn More
+                        </div>
+                    </a>
+
+                </div>
+            </section>
+
         </main>
 
         <footer class="footer">
