Debugged sixth section "Postulates"

--- a/index.html
+++ b/index.html
@@ -422,7 +422,10 @@
             </section>
 
             <section class="postulates">
-                <div class="postulates__background-image"></div>
+                <div class="postulates__background-image one active"></div>
+                <div class="postulates__background-image two"></div>
+                <div class="postulates__background-image three"></div>
+                <div class="postulates__background-image four"></div>
                 <div class="postulates__container">
                     <div class="postulates__first-paragraph">
                         <p>
@@ -431,22 +434,19 @@
                     </div>
                     <div class="postulates__list-items">
                         <ol>
-                            <li id="btn-one" class="postulates__list-item yellow active"
-                                onmouseenter="getBackgroundImageOne()">
+                            <li class="postulates__list-item yellow active">
                                 <span class="postulates__number-item yellow active">1</span>Protect Wildlife
                             </li>
                             <br>
-                            <li id="btn-two" class="postulates__list-item blue" onmouseenter="getBackgroundImageTwo()">
+                            <li class="postulates__list-item blue">
                                 <span class="postulates__number-item blue">2</span>Preserve the Environment
                             </li>
                             <br>
-                            <li id="btn-three" class="postulates__list-item pink"
-                                onmouseenter="getBackgroundImageThree()">
+                            <li class="postulates__list-item pink">
                                 <span class="postulates__number-item pink">3</span>Grow Tourism Responsibly
                             </li>
                             <br>
-                            <li id="btn-four" class="postulates__list-item gray"
-                                onmouseenter="getBackgroundImageFour()">
+                            <li class="postulates__list-item gray">
                                 <span class="postulates__number-item gray">4</span>Reduce Emissions
                             </li>
                         </ol>
@@ -458,15 +458,15 @@
                             offer, but we believe that our presence as travellers should always be a force for good –
                             conserving habitats, preserving natural resources and protecting species.
                         </p>
-                        <!-- <p class="postulates__second-paragraph blue">
+                        <p class="postulates__second-paragraph blue">
                             In our view, we should all strive to preserve and regenerate the places we visit. From eliminating single-use plastics, to finding new, more effective ways to reduce and offset carbon emissions – it all adds up doing good while we travel.
-                        </p> -->
-                        <!-- <p class="postulates__second-paragraph pink">
+                        </p>
+                        <p class="postulates__second-paragraph pink">
                             By expanding travel’s economic benefits, alleviating overcrowding and filtering tourism through to less-visited areas, we believe that travel’s exponential growth can be a positive force. Tourism should empower local communities, allowing hosts to capitalise on, and protect, their natural and cultural resources.
-                        </p> -->
-                        <!-- <p class="postulates__second-paragraph gray">
+                        </p>
+                        <p class="postulates__second-paragraph gray">
                             We know that reducing the environmental impact of transport and aviation is key to reducing the travel industry’s overall footprint. Collectively, the industry must work towards a range of measures, from emissions reporting and investment in new technology, to aligning on policy change.
-                        </p> -->
+                        </p>
                     </div>
                 </div>
             </section>
