Work on the section "Founders"

--- a/index.html
+++ b/index.html
@@ -118,15 +118,90 @@
             <section class="founders">
                 <div class="founders__container">
 
-                    <div class="founders__title">
-                        <blockquote>At Travalyst, we’re bringing travellers, communities, and the travel industry
-                            to the table to change the way we see and share the world.</blockquote>
-                    </div>
-                    <div class="founders__text">
-                        <blockquote>By working with Travalyst and our industry partners, we aim to build tools and
-                            technology that enable travelers and businesses around the world to prioritize
-                            sustainability.”
-                        </blockquote>
+                    <div class="founders__blockquotes">
+                        <div class="founders__blockquote relative active">
+                            <div class="founders__title">
+                                <blockquote>At Travalyst, we’re bringing travellers, communities, and the travel
+                                    industry
+                                    to the table to change the way we see and share the world.</blockquote>
+                            </div>
+                            <div class="founders__text">
+                                <blockquote>By working with Travalyst and our industry partners, we aim to build tools
+                                    and
+                                    technology that enable travelers and businesses around the world to prioritize
+                                    sustainability.”
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="founders__blockquote">
+                            <div class="founders__title">
+                                <blockquote>At Amadeus we acknowledge our responsibility to contribute to a more
+                                    sustainable travel industry.</blockquote>
+                            </div>
+                            <div class="founders__text">
+                                <blockquote>Travalyst offers us a fantastic opportunity to work collaboratively with
+                                    other industry partners on this common goal. We are excited about being part of the
+                                    Travalyst coalition and joining efforts towards a better industry future.”
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="founders__blockquote">
+                            <div class="founders__title">
+                                <blockquote>At Booking.com, we strive for sustainability to manifest in varying aspects
+                                    of our business operations – from understanding our role in protecting and improving
+                                    the environment to making sure tourism is a force for good.</blockquote>
+                            </div>
+                            <div class="founders__text">
+                                <blockquote>Together with Travalyst, we can cultivate a healthier, more sustainable
+                                    world for everyone.”
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="founders__blockquote">
+                            <div class="founders__title">
+                                <blockquote>Expedia Group is taking action to address climate change and is committed to
+                                    working across our industry and with a range of partners to shape a sustainable
+                                    travel and tourism sector.”</blockquote>
+                            </div>
+                        </div>
+                        <div class="founders__blockquote">
+                            <div class="founders__title">
+                                <blockquote>Addressing the challenge of climate change requires us to find solutions at
+                                    scale, and this is especially true when it comes to travel and tourism.</blockquote>
+                            </div>
+                            <div class="founders__text">
+                                <blockquote>By working with Travalyst and our industry partners, we aim to build tools
+                                    and technology that enable travelers and businesses around the world to prioritize
+                                    sustainability.”
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="founders__blockquote">
+                            <div class="founders__title">
+                                <blockquote>We should all individually address the climate emergency, but it’s a lot
+                                    easier to make progress working together. We co-founded the Travalyst coalition to
+                                    protect our planet and the people on it.</blockquote>
+                            </div>
+                            <div class="founders__text">
+                                <blockquote>We’re encouraging our global community to make responsible choices when
+                                    traveling, so they — and future generations — get the most out of the experience,
+                                    with the least impact on the environment.”
+                                </blockquote>
+                            </div>
+                        </div>
+                        <div class="founders__blockquote">
+                            <div class="founders__title">
+                                <blockquote>Enabling global travel and commerce through digital payments is one of many
+                                    ways Visa connects and empowers individuals, businesses and economies every day.
+                                </blockquote>
+                            </div>
+                            <div class="founders__text">
+                                <blockquote>We are dedicated to doing so in a way that supports our commitment to
+                                    sustainability. We are proud to be part of this initiative to support long-term
+                                    economic growth through tourism.”
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="founders-slider swiper-container">
@@ -137,7 +212,7 @@
                                         alt="1st_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Prince Harry</p>
+                                    <h6>Prince Harry</h6>
                                     <p>The Duke of Sussex</p>
                                 </div>
                             </div>
@@ -147,8 +222,8 @@
                                         alt="2nd_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Name</p>
-                                    <p>Almamater</p>
+                                    <h6>Lucas Bobes</h6>
+                                    <p>Group Environmental Officer & Head of ESG Reporting, Amadeus</p>
                                 </div>
                             </div>
                             <div class="founders-slider__slide swiper-slide">
@@ -157,8 +232,8 @@
                                         alt="3rd_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Name</p>
-                                    <p>Almamater</p>
+                                    <h6>Glenn Fogel</h6>
+                                    <p>CEO, Booking.com</p>
                                 </div>
                             </div>
                             <div class="founders-slider__slide swiper-slide">
@@ -167,8 +242,8 @@
                                         alt="4ht_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Name</p>
-                                    <p>Almamater</p>
+                                    <h6>Aditi Mohapatra</h6>
+                                    <p>Vice President of Global Social Impact and Sustainability, Expedia Group</p>
                                 </div>
                             </div>
                             <div class="founders-slider__slide swiper-slide">
@@ -177,8 +252,8 @@
                                         alt="5th_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Name</p>
-                                    <p>Almamater</p>
+                                    <h6>Kate Brandt</h6>
+                                    <p>Chief Sustainability Officer, Google</p>
                                 </div>
                             </div>
                             <div class="founders-slider__slide swiper-slide">
@@ -187,8 +262,8 @@
                                         alt="6th_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Name</p>
-                                    <p>Almamater</p>
+                                    <h6>Kanika Soni</h6>
+                                    <p>Chief Commercial Officer, Tripadvisor</p>
                                 </div>
                             </div>
                             <div class="founders-slider__slide swiper-slide">
@@ -197,8 +272,8 @@
                                         alt="7th_photo">
                                 </div>
                                 <div class="founders-slider__text">
-                                    <p>Name</p>
-                                    <p>Almamater</p>
+                                    <h6>Al Kelly</h6>
+                                    <p>Chairman and CEO, Visa</p>
                                 </div>
                             </div>
                         </div>
@@ -210,7 +285,6 @@
                     </div>
 
                 </div>
-
             </section>
 
             <section class="frameworks">
@@ -459,13 +533,21 @@
                             conserving habitats, preserving natural resources and protecting species.
                         </p>
                         <p class="postulates__second-paragraph blue">
-                            In our view, we should all strive to preserve and regenerate the places we visit. From eliminating single-use plastics, to finding new, more effective ways to reduce and offset carbon emissions – it all adds up doing good while we travel.
+                            In our view, we should all strive to preserve and regenerate the places we visit. From
+                            eliminating single-use plastics, to finding new, more effective ways to reduce and offset
+                            carbon emissions – it all adds up doing good while we travel.
                         </p>
                         <p class="postulates__second-paragraph pink">
-                            By expanding travel’s economic benefits, alleviating overcrowding and filtering tourism through to less-visited areas, we believe that travel’s exponential growth can be a positive force. Tourism should empower local communities, allowing hosts to capitalise on, and protect, their natural and cultural resources.
+                            By expanding travel’s economic benefits, alleviating overcrowding and filtering tourism
+                            through to less-visited areas, we believe that travel’s exponential growth can be a positive
+                            force. Tourism should empower local communities, allowing hosts to capitalise on, and
+                            protect, their natural and cultural resources.
                         </p>
                         <p class="postulates__second-paragraph gray">
-                            We know that reducing the environmental impact of transport and aviation is key to reducing the travel industry’s overall footprint. Collectively, the industry must work towards a range of measures, from emissions reporting and investment in new technology, to aligning on policy change.
+                            We know that reducing the environmental impact of transport and aviation is key to reducing
+                            the travel industry’s overall footprint. Collectively, the industry must work towards a
+                            range of measures, from emissions reporting and investment in new technology, to aligning on
+                            policy change.
                         </p>
                     </div>
                 </div>
