Completed the section "Founders"

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="founders__container">
 
                     <div class="founders__blockquotes">
-                        <div class="founders__blockquote relative active">
+                        <div class="founders__blockquote active">
                             <div class="founders__title">
                                 <blockquote>At Travalyst, we’re bringing travellers, communities, and the travel
                                     industry
