--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="founders-slider-wrapper _anim-items _anim-no-hide">
+
+                    <div class="founders-slider-global-wrapper _anim-items _anim-no-hide">
                         <div class="founders-slider swiper-container">
                             <div class="founders-slider__wrapper swiper-wrapper">
                                 <div class="founders-slider__slide swiper-slide">
@@ -289,6 +290,7 @@
                             <div class="swiper-button-next button-next"></div>
                         </div>
                     </div>
+
                 </div>
             </section>
 
@@ -424,7 +426,7 @@
 
                         <div class="sustainably__rows _anim-items _anim-no-hide">
 
-                            <div class="sustainably__row">
+                            <span class="sustainably__row">
                                 <div class="sustainably__value">
                                     <span>71</span>%
                                 </div>
@@ -444,9 +446,9 @@
                                         Booking.com
                                     </a>
                                 </div>
-                            </div>
+                            </span>
 
-                            <div class="sustainably__row">
+                            <span class="sustainably__row">
                                 <div class="sustainably__value">
                                     <span>68</span>mn
                                 </div>
@@ -464,9 +466,9 @@
                                         Skyscanner
                                     </a>
                                 </div>
-                            </div>
+                            </span>
 
-                            <div class="sustainably__row">
+                            <span class="sustainably__row">
                                 <div class="sustainably__value">
                                     <span>7</span> in 10
                                 </div>
@@ -484,7 +486,7 @@
                                         Expedia
                                     </a>
                                 </div>
-                            </div>
+                            </span>
 
                         </div>
 
