Fix section sustainably
Fixed the appearance of the link .sustainably__link when hover on .sustainably__star

--- a/index.html
+++ b/index.html
@@ -423,7 +423,6 @@
                             </h2>
                         </div>
 
-
                         <div class="sustainably__rows _anim-items _anim-no-hide">
 
                             <span class="sustainably__row">
@@ -436,15 +435,15 @@
                                         sustainably, up 10% from 2021
                                     </p>
                                 </div>
-                                <div class="sustainably__block-star">
+                                <div class="sustainably__block-starandlink">
                                     <div class="sustainably__star"></div>
-                                </div>
 
-                                <div class="sustainably__link">
-                                    <a
-                                        href="https://www.booking.com/index.ru.html?aid=304142&label=gen173nr-1BCAEoggI46AdIM1gEaOkBiAEBmAEhuAEXyAEM2AEB6AEBiAIBqAIDuAKqzPifBsACAdICJDVkMDNmMTIwLTU2NzYtNGZhMi1iMWY2LTMxZDQ0YjZjZDlhOdgCBeACAQ&sid=8353f520b3b47115639912a2f48bdacc&">
-                                        Booking.com
-                                    </a>
+                                    <div class="sustainably__link">
+                                        <a
+                                            href="https://www.booking.com/index.ru.html?aid=304142&label=gen173nr-1BCAEoggI46AdIM1gEaOkBiAEBmAEhuAEXyAEM2AEB6AEBiAIBqAIDuAKqzPifBsACAdICJDVkMDNmMTIwLTU2NzYtNGZhMi1iMWY2LTMxZDQ0YjZjZDlhOdgCBeACAQ&sid=8353f520b3b47115639912a2f48bdacc&">
+                                            Booking.com
+                                        </a>
+                                    </div>
                                 </div>
                             </span>
 
@@ -457,14 +456,14 @@
                                         have selected lower emissions flights on Skyscanner since 2019
                                     </p>
                                 </div>
-                                <div class="sustainably__block-star">
+                                <div class="sustainably__block-starandlink">
                                     <div class="sustainably__star"></div>
-                                </div>
 
-                                <div class="sustainably__link">
-                                    <a href="https://www.skyscanner.com.ua/ua/ru-ru/uah/">
-                                        Skyscanner
-                                    </a>
+                                    <div class="sustainably__link">
+                                        <a href="https://www.skyscanner.com.ua/ua/ru-ru/uah/">
+                                            Skyscanner
+                                        </a>
+                                    </div>
                                 </div>
                             </span>
 
@@ -477,14 +476,14 @@
                                         feel overwhelmed by starting the process of being a more sustainable traveller
                                     </p>
                                 </div>
-                                <div class="sustainably__block-star">
+                                <div class="sustainably__block-starandlink">
                                     <div class="sustainably__star"></div>
-                                </div>
 
-                                <div class="sustainably__link">
-                                    <a href="https://www.expedia.com/">
-                                        Expedia
-                                    </a>
+                                    <div class="sustainably__link">
+                                        <a href="https://www.expedia.com/">
+                                            Expedia
+                                        </a>
+                                    </div>
                                 </div>
                             </span>
 
